main/default/objects/SupplierKPI__c/SupplierKPI__c.object-meta.xml
<CustomObject>
    <description>Supplier KPIs</description>
    <label>SupplierKPI</label>
    <nameField>
        <displayFormat>SKPI-{000000}</displayFormat>
        <label>SuplierKPINp</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SupplierKPis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>