main/default/objects/SupplierKPI__c/fields/KPI_Description__c.field-meta.xml
<CustomField>
    <fullName>KPI_Description__c</fullName>
    <formula>SIPMKPI__r.KPI_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI Description</label>
    <type>Text</type>
</CustomField>