main/default/objects/SupplierKPI__c/fields/KPI_Target__c.field-meta.xml
<CustomField>
    <fullName>KPI_Target__c</fullName>
    <formula>SIPMKPI__r.KPI_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI Target</label>
    <type>Text</type>
</CustomField>