main/default/objects/SupplierKPI__c/fields/Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Qualifier__c</fullName>
    <formula>TEXT( SIPMKPI__r.Qualifier__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualifier</label>
    <type>Text</type>
</CustomField>