main/default/objects/SupplierKPI__c/fields/SIPMKPI__c.field-meta.xml
<CustomField>
    <fullName>SIPMKPI__c</fullName>
    <description>SIPM KPI</description>
    <inlineHelpText>SIPM KPI</inlineHelpText>
    <label>SIPM KPI</label>
    <referenceTo>SPIM_KPI__c</referenceTo>
    <relationshipLabel>SupplierKPis</relationshipLabel>
    <relationshipName>SupplierKPis</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>